objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Contacted_Source__c</fullName>
        <label>Contacted Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_For_Other__c</fullName>
        <label>Reason For Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for &apos;Other&apos;</description>
        <label>Reason</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reasons__c</fullName>
        <label>Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Client turnover too small</fullName>
                </value>
                <value>
                    <fullName>Client in low propensity sector / industry</fullName>
                </value>
                <value>
                    <fullName>Other (with a reason)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
    <validationRules>
        <fullName>ReasonRequireWhenOtherSelectedInStatus</fullName>
        <active>true</active>
        <description>Validates that a custom field called Reason contains a value
if a campaign member status has a Reason of “Not Interested -Other.”</description>
        <errorConditionFormula>AND(
TEXT(Status) = &apos;Not Interested&apos;,
ISBLANK(Reason__c))</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Please enter a reason</errorMessage>
    </validationRules>
</CustomObject>